--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "makima.js",
-  "version": "0.0.3",
+  "name": "discordjs",
+  "version": "0.0.4",
   "description": "Universal module beta.",
   "main": "index.js",
   "scripts": {
